project (fontmanager)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(${CMAKE_JS_INC})
set(SOURCE_FILES "src/FontDescriptor.cc" "src/FontManager.cc")

if(APPLE)
    set(OS_FILES "src/FontManagerMac.cc")
    set(OS_FLAGS)
elseif(WIN32)
    set(OS_FILES "src/FontManagerWindows.cc")
    set(OS_FLAGS "-lDwrite")
elseif(UNIX)
    set(OS_FILES "src/FontManagerLinux.cc")
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(FC REQUIRED fontconfig)
    include_directories(${FC_INCLUDE_DIRS})
    set(OS_FLAGS ${FC_LIBRARIES} ${FC_CFLAGS})
endif()

add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${OS_FILES} ${CMAKE_JS_SRC})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB} ${OS_FLAGS})
